--- a/PushAlarm/app/src/main/res/values/strings.xml
+++ b/PushAlarm/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PushAlarm</string>
+    <string name="result">결과</string>
+    <string name="firebase_token">Firebase 토큰</string>
+    <string name="loading">loading..</string>
 </resources>
